--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,11 @@
-PORT=3000
-
-JWT_SECRET=xxxx
 
 
-DB_PASSWORD=xxxx
-DB_NAME=xxxx
-DB_HOST=xxxx
-DB_PORT=xxxx
-DB_USERNAME=xxxx
+PORT=3001
+
+JWT_SECRET=xxxxx
+
+NODE_ENV=development
+
+DB_URL=postgres://<user>:<pass>@localhost:<port>/<database>
+
+NATS_SERVERS="nats://localhost:4222
