--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "jest --config ./test/jest-e2e.json",
+
+    "mikro-orm:schema:update": "mikro-orm schema:update --run --config=./dist/mikro-orm.config.js"
+
+
+
     },
     "dependencies": {
         "@formkit/tempo": "^0.1.1",
