Update Dockerfile to include a build step and a command to run mikro-orm:schema:update and yarn dev Update Mikro-ORM configuration to use process.env.DB_URL instead of envs.db_url

--- a/.env.template
+++ b/.env.template
@@ -8,4 +8,4 @@ NODE_ENV=development
 
 DB_URL=postgres://<user>:<pass>@localhost:<port>/<database>
 
-NATS_SERVERS="nats://localhost:4222
+NATS_SERVERS=nats://localhost:4222
