--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
         "pg": "^8.12.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0",
-        "uuid": "^10.0.0"
+        "uuid": "^10.0.0",
+            "@tesis-project/dev-globals": "^1.0.2"
     },
     "devDependencies": {
         "@nestjs/cli": "^9.0.0",
